<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.udle.activities.DeliveryRestaurantMapActivity"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:id="@+id/DeliveryMap_GoogleMaps"
        tools:context="ch.epfl.sweng.udle.MapActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />
    <ListView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listOrderRestaurantMap"
        android:layout_marginTop="30dp"
        android:layout_weight="0.9"
        android:contentDescription="@string/listOrderRestaurantMap"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">
        <Button
            android:layout_margin="@dimen/_3sdp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/switchToListMode"
            android:id="@+id/button_list_mode"
            android:onClick="switchOrderList"
            android:layout_weight="0.5"

            android:textAllCaps="false"
            android:textSize="15sp"

            android:background="@drawable/button_shape2"
            android:textColor="@color/colorUdle"

            />
        <Button
            android:layout_margin="@dimen/_3sdp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/Refresh"
            android:id="@+id/RestaurantMap_button_refresh"
            android:onClick="refreshAll"
            android:layout_weight="0.5"

            android:textAllCaps="false"
            android:textColor="@color/colorUdle"
            android:textSize="15sp"

            android:background="@drawable/button_shape2"

            />

    </LinearLayout>
</LinearLayout>


</RelativeLayout>

