...
    <string name="back">back</string>
    <string name="currentOrders">Current Orders</string>
    <string name="currentOrdersDetail">see your current orders</string>

    <string name="OrderNotAvailable">Sorry, the order is no more available.</string>
    <string name="listOrderRestaurantMap">listOrderRestaurantMap</string>
    <string name="switchToListMode">Switch to List mode</string>
    <string name="No_orders_for_now">No orders for now </string>
    <string name="Wait_a_moment">Wait a moment please</string>
    <string name="options">"Options:  "</string>
    <string name="status">Status</string>
    <string name="enRoute">En Route</string>
    <string name="expectedTime_min">Expected time (min)</string>
    <string name="Loading">Loading</string>
    <string name="checkingForNewOrders">Checking for new orders...</string>
...
