...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listCurrentOrders"
            android:layout_marginTop="30dp"
            android:layout_weight="0.9"
            android:contentDescription="listCurrentOrders"
            />
    <LinearLayout
        android:orientation="horizontal"
...
